--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
         <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Wyszukaj ogłoszenia...">
         </div>
-        <div class="listings" id="listings">
-            <!-- Przykładowe ogłoszenia zostaną wstawione tutaj -->
-        </div>
+        <div class="listings" id="listings"></div>
     </div>
 
-    <div id="listings" class="page" style="display:none;">
+    <div id="listingsPage" class="page" style="display:none;">
         <h2>Ogłoszenia</h2>
         <div class="listings" id="allListings"></div>
     </div>
