--- a/index.html
+++ b/index.html
@@ -5,73 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Otoauto</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-
-<header>
-    <h1>Otoauto</h1>
-    <nav>
-        <a href="#" onclick="showPage('home')">Strona Główna</a>
-        <a href="#" onclick="showPage('listings')">Ogłoszenia</a>
-        <a href="#" onclick="showPage('create_listing')">Dodaj Ogłoszenie</a>
-        <a href="#" onclick="showPage('contact')">Kontakt</a>
-        <a href="#" onclick="showPage('create_profile')">Stwórz Profil</a>
-    </nav>
-</header>
-
-<div class="container">
-
-    <div id="home" class="page">
-        <h2>Witaj w Otoauto!</h2>
-        <div class="search-bar">
-            <input type="text" id="searchInput" placeholder="Wyszukaj ogłoszenia...">
-        </div>
-        <div class="listings" id="listings"></div>
-    </div>
-
-    <div id="listingsPage" class="page" style="display:none;">
-        <h2>Ogłoszenia</h2>
-        <div class="listings" id="allListings"></div>
-    </div>
-
-    <div id="create_listing" class="page" style="display:none;">
-        <h2>Dodaj Ogłoszenie</h2>
-        <div class="form-container">
-            <form id="listingForm">
-                <input type="text" id="make" placeholder="Marka" required>
-                <input type="text" id="model" placeholder="Model" required>
-                <input type="number" id="year" placeholder="Rok produkcji" required>
-                <textarea id="description" placeholder="Opis" required></textarea>
-                <input type="file" id="image" accept="image/*" required>
-                <input type="number" id="price" placeholder="Cena" required>
-                <button type="submit">Dodaj ogłoszenie</button>
-            </form>
-        </div>
-    </div>
-
-    <div id="contact" class="page" style="display:none;">
-        <h2>Kontakt</h2>
-        <div class="contact-container">
-            <p>Imię i Nazwisko: Jan Kowalski</p>
-            <p>Email: jan.kowalski@example.com</p>
-            <p>Telefon: 123-456-789</p>
-        </div>
-    </div>
-
-    <div id="create_profile" class="page" style="display:none;">
-        <h2>Stwórz Profil</h2>
-        <div class="form-container">
-            <form id="profileForm">
-                <input type="text" id="profileName" placeholder="Imię i Nazwisko" required>
-                <input type="email" id="profileEmail" placeholder="Email" required>
-                <input type="password" id="profilePassword" placeholder="Hasło" required>
-                <button type="submit">Stwórz profil</button>
-            </form>
-        </div>
-    </div>
-
-</div>
-
-<script src="script.js"></script>
+    <header>
+        <h1>Otoauto</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="ogloszenia.html">Ogłoszenia</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="create_profile.html">Stwórz Profil</a></li>
+            </ul>
+            <input type="text" id="search" placeholder="Szukaj...">
+        </nav>
+    </header>
+    <main>
+        <h2>Aktualne ogłoszenia</h2>
+        <div id="listings"></div>
+        <button onclick="showCreateListingForm()">Dodaj ogłoszenie</button>
+    </main>
 </body>
 </html>
