--- a/contact.html
+++ b/contact.html
@@ -3,35 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
+    <title>Otoauto - Kontakt</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Kontakt</h1>
+        <h1>Otoauto</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Strona główna</a></li>
-                <li><a href="create_listing.html">Kup lub Sprzedaj</a></li>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="ogloszenia.html">Ogłoszenia</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
-                <li><a href="create_profile.html">Stwórz profil</a></li>
+                <li><a href="create_profile.html">Stwórz Profil</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section class="contact-info">
+        <div class="contact-info">
             <h2>Dane kontaktowe</h2>
-            <div class="contact-details">
-                <p>Imię i nazwisko: Jan Kowalski</p>
-                <p>Email: jan.kowalski@example.com</p>
-                <p>Telefon: 123-456-789</p>
-            </div>
-        </section>
+            <p>Email: kontakt@otoauto.pl</p>
+            <p>Telefon: 123-456-789</p>
+        </div>
     </main>
-
-    <footer>
-        <p>© 2024 Komis Samochodowy</p>
-    </footer>
 </body>
 </html>
