--- a/create_profile.html
+++ b/create_profile.html
@@ -3,42 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stwórz Profil</title>
+    <title>Otoauto - Stwórz Profil</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Stwórz Profil</h1>
+        <h1>Otoauto</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Strona główna</a></li>
-                <li><a href="create_listing.html">Kup lub Sprzedaj</a></li>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="ogloszenia.html">Ogłoszenia</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
-                <li><a href="create_profile.html">Stwórz profil</a></li>
+                <li><a href="create_profile.html">Stwórz Profil</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section class="profile-form">
-            <h2>Formularz tworzenia profilu</h2>
-            <form id="profileForm">
-                <label for="name">Imię:</label>
-                <input type="text" id="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" required>
-
-                <label for="phone">Telefon:</label>
-                <input type="tel" id="phone" required>
-
-                <button type="submit">Stwórz profil</button>
-            </form>
-        </section>
+        <h2>Stwórz Profil</h2>
+        <div class="profile-form">
+            <input type="text" placeholder="Imię">
+            <input type="text" placeholder="Nazwisko">
+            <input type="email" placeholder="Email">
+            <input type="password" placeholder="Hasło">
+            <button>Stwórz Profil</button>
+        </div>
     </main>
-
-    <footer>
-        <p>© 2024 Komis Samochodowy</p>
-    </footer>
 </body>
 </html>
