--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Otoauto - Kontakt</title>
+    <title>Kontakt - Otoauto</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,18 +12,23 @@
         <nav>
             <ul>
                 <li><a href="index.html">Strona Główna</a></li>
-                <li><a href="ogloszenia.html">Ogłoszenia</a></li>
+                <li><a href="listings.html">Ogłoszenia</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><a href="create_profile.html">Stwórz Profil</a></li>
+                <li><a href="create_listing.html">Dodaj Ogłoszenie</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <h2>Kontakt</h2>
         <div class="contact-info">
-            <h2>Dane kontaktowe</h2>
-            <p>Email: kontakt@otoauto.pl</p>
             <p>Telefon: 123-456-789</p>
+            <p>Email: kontakt@otoauto.pl</p>
+            <p>Adres: ul. Przykładowa 1, 00-001 Miasto</p>
         </div>
     </main>
+    <footer>
+        <p>&copy; 2024 Otoauto</p>
+    </footer>
 </body>
 </html>
