--- a/create_profile.html
+++ b/create_profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Otoauto - Stwórz Profil</title>
+    <title>Stwórz Profil - Otoauto</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,21 +12,28 @@
         <nav>
             <ul>
                 <li><a href="index.html">Strona Główna</a></li>
-                <li><a href="ogloszenia.html">Ogłoszenia</a></li>
+                <li><a href="listings.html">Ogłoszenia</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><a href="create_profile.html">Stwórz Profil</a></li>
+                <li><a href="create_listing.html">Dodaj Ogłoszenie</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>Stwórz Profil</h2>
-        <div class="profile-form">
-            <input type="text" placeholder="Imię">
-            <input type="text" placeholder="Nazwisko">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Hasło">
-            <button>Stwórz Profil</button>
-        </div>
+        <form id="profileForm">
+            <label for="username">Nazwa Użytkownika:</label>
+            <input type="text" id="username" required>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" required>
+            <label for="password">Hasło:</label>
+            <input type="password" id="password" required>
+            <button type="submit">Stwórz Profil</button>
+        </form>
     </main>
+    <footer>
+        <p>&copy; 2024 Otoauto</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
