--- a/create_listing.html
+++ b/create_listing.html
@@ -3,51 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dodaj Ogłoszenie</title>
+    <title>Dodaj Ogłoszenie - Otoauto</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Dodaj Ogłoszenie</h1>
+        <h1>Otoauto</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Strona główna</a></li>
-                <li><a href="create_listing.html">Kup lub Sprzedaj</a></li>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="listings.html">Ogłoszenia</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
-                <li><a href="create_profile.html">Stwórz profil</a></li>
+                <li><a href="create_profile.html">Stwórz Profil</a></li>
+                <li><a href="create_listing.html">Dodaj Ogłoszenie</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section class="listing-form">
-            <h2>Formularz dodawania ogłoszenia</h2>
-            <form id="listingForm">
-                <label for="carMake">Marka:</label>
-                <input type="text" id="carMake" required>
-
-                <label for="carModel">Model:</label>
-                <input type="text" id="carModel" required>
-
-                <label for="carYear">Rok produkcji:</label>
-                <input type="number" id="carYear" required>
-
-                <label for="phone">Numer telefonu:</label>
-                <input type="tel" id="phone" required>
-
-                <label for="description">Opis:</label>
-                <textarea id="description" required></textarea>
-
-                <label for="image">Zdjęcie (link):</label>
-                <input type="url" id="image">
-
-                <button type="submit">Dodaj ogłoszenie</button>
-            </form>
-        </section>
+        <h2>Dodaj Ogłoszenie</h2>
+        <form id="listingForm">
+            <label for="title">Tytuł:</label>
+            <input type="text" id="title" required>
+            <label for="price">Cena:</label>
+            <input type="number" id="price" required>
+            <label for="description">Opis:</label>
+            <textarea id="description" required></textarea>
+            <label for="image">Wybierz zdjęcie:</label>
+            <input type="file" id="image" accept="image/*" required>
+            <button type="submit">Dodaj Ogłoszenie</button>
+        </form>
     </main>
-
     <footer>
-        <p>© 2024 Komis Samochodowy</p>
+        <p>&copy; 2024 Otoauto</p>
     </footer>
     <script src="script.js"></script>
 </body>
