--- a/listings.html
+++ b/listings.html
@@ -3,46 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ogłoszenia - Otoauto</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Ogłoszenia - Otoauto</title>
 </head>
 <body>
     <header>
         <h1>Otoauto</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="index.html">Strona główna</a></li>
+                <li><a href="create_listing.html">Dodaj ogłoszenie</a></li>
                 <li><a href="listings.html">Ogłoszenia</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
-                <li><a href="create_profile.html">Stwórz Profil</a></li>
-                <li><a href="create_listing.html">Dodaj Ogłoszenie</a></li>
+                <li><a href="create_profile.html">Stwórz profil</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>Ogłoszenia</h2>
-        <div id="listings">
-            <!-- Przykładowe ogłoszenia -->
-            <div class="listing">
-                <h3>Ford Focus 2018</h3>
-                <p>Cena: 45 000 zł</p>
-                <p>Opis: Dobrze utrzymany, ekonomiczny samochód.</p>
-            </div>
-            <div class="listing">
-                <h3>Volkswagen Golf 2019</h3>
-                <p>Cena: 55 000 zł</p>
-                <p>Opis: Stylowy hatchback z niskim przebiegiem.</p>
-            </div>
-            <div class="listing">
-                <h3>BMW 320i 2020</h3>
-                <p>Cena: 85 000 zł</p>
-                <p>Opis: Luksusowy sedan, perfekcyjny stan.</p>
-            </div>
-        </div>
+        <div id="listings"></div>
     </main>
     <footer>
         <p>&copy; 2024 Otoauto</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
