--- a/create_listing.html
+++ b/create_listing.html
@@ -23,6 +23,9 @@
         <h2>Dodaj ogłoszenie</h2>
         <form id="listingForm">
             <input type="text" id="title" placeholder="Tytuł" required>
+            <input type="text" id="brand" placeholder="Marka" required>
+            <input type="text" id="model" placeholder="Model" required>
+            <input type="number" id="year" placeholder="Rok produkcji" required>
             <input type="text" id="price" placeholder="Cena (zł)" required>
             <textarea id="description" placeholder="Opis" required></textarea>
             <input type="file" id="image" accept="image/*" required>
