--- a/create_listing.html
+++ b/create_listing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Dodaj ogłoszenie - Otoauto</title>
+    <title>Dodaj ogłoszenie</title>
 </head>
 <body>
     <header>
@@ -13,7 +13,6 @@
             <ul>
                 <li><a href="index.html">Strona główna</a></li>
                 <li><a href="create_listing.html">Dodaj ogłoszenie</a></li>
-                <li><a href="listings.html">Ogłoszenia</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><a href="create_profile.html">Stwórz profil</a></li>
             </ul>
@@ -25,13 +24,12 @@
             <input type="text" id="title" placeholder="Tytuł" required>
             <input type="text" id="brand" placeholder="Marka" required>
             <input type="text" id="model" placeholder="Model" required>
-            <input type="number" id="year" placeholder="Rok produkcji" required>
-            <input type="text" id="price" placeholder="Cena (zł)" required>
+            <input type="number" id="year" placeholder="Rok" required>
+            <input type="number" id="price" placeholder="Cena (zł)" required>
             <textarea id="description" placeholder="Opis" required></textarea>
             <input type="file" id="image" accept="image/*" required>
             <button type="submit">Dodaj ogłoszenie</button>
         </form>
-        <div id="listings"></div>
     </main>
     <footer>
         <p>&copy; 2024 Otoauto</p>
